--- a/00_startcamp/04_day/dict/templates/lotto_check.html
+++ b/00_startcamp/04_day/dict/templates/lotto_check.html
@@ -9,8 +9,8 @@
 <body>
     <form action="/lotto_result">
         <h1>로또 가자링~</h1>
-        로또회차 : <input type="text", name="num"><br>
-        로또번호 : <input type="text", name="numbers">
+        로또회차 : <input type="text" name="num"><br>
+        로또번호 : <input type="text" name="numbers">
         <input type="submit" value="로또가즈아">
     </form>
 </body>
