--- a/03_web/01_css/07_background.css
+++ b/03_web/01_css/07_background.css
@@ -36,7 +36,8 @@ body {
   background-repeat: no-repeat;
 
   /* background-position */
-  background-position: 0, 0; /* 이미지의 중심이 0, 0임 */
+  background-position: 0, 0;
+   /* 이미지의 중심이 0, 0임 */
   background-position: center;
 
   /* background-attachment */
