190816 | update 00_django_intro

--- a/04_django/00_django_intro/pages/templates/pages/isitgwangbok.html
+++ b/04_django/00_django_intro/pages/templates/pages/isitgwangbok.html
@@ -1,5 +1,8 @@
+{% extends 'base.html' %}
+{% block content %}
 {% if result %}
 <h1>오늘은 광복절입니다.</h1>
 {% else %}
 <h1>오늘은 광복절이 아닙니다.</h1>
 {% endif%}
+{% endblock %}
