--- a/04_django/00_django_intro/pages/templates/pages/template_language.html
+++ b/04_django/00_django_intro/pages/templates/pages/template_language.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+{% block content %}
 <h3>1. 반복문</h3>
 {% for menu in menus %}
 <p>{{ menu }}</p>
@@ -109,3 +111,5 @@ Copyright {{ current_year }}
 
 <h3>9. 기타</h3>
 <p>{{ 'google.com'|urlize }}</p>
+
+{% endblock %}
