--- a/04_django/03_django_crud_REST/articles/templates/articles/create.html
+++ b/04_django/03_django_crud_REST/articles/templates/articles/create.html
@@ -1,13 +1,17 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
+  <img src="{% static 'images/apple.png' %}" alt="asset_img">
   <h1 class="text-center">CREATE</h1>
-  <form action="{% url 'articles:create' %}" method="POST">
+  <form action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     <label for="title">TITLE</label>
-    <input type="text" name="title" id="title"><br>
+    <input type="text" name="title" id="title" required><br>
     <label for="content">CONTENT</label>
     <textarea name="content" id="content" cols="30" rows="5"></textarea><br>
+    <label for="image">IMAGE</label>
+    <input type="file" name="image" id="image" accept="image/*">
     <input type="submit" value="submit">
   </form>
 {% endblock %}
