--- a/04_django/03_django_crud_REST/articles/templates/articles/update.html
+++ b/04_django/03_django_crud_REST/articles/templates/articles/update.html
@@ -1,13 +1,21 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
   <h1 class="text-center">UPDATE</h1>
-  <form action="" method="POST">
+  {% if article.image %}
+    <img src="{{ article.image.url }}" alt="sample">
+  {% else %}
+    <img src="{% static 'articles/images/no_image.png' %}" alt="no_image" width="200px">
+  {% endif %}
+  <form action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     <label for="title">TITLE</label>
     <input type="text" name="title" id="title" value="{{ article.title }}"><br>
     <label for="content">CONTENT</label>
     <textarea name="content" id="content" cols="30" rows="5">{{ article.content }}</textarea><br>
+    <label for="image">IMAGE</label>
+    <input type="file" name="image" id="image" accept="image/*"><br>
     <input type="submit" value="submit">
   </form>
   <a href="{{ article.get_absolute_url }}">[back]</a>
