--- a/04_django/04_django_form/articles/templates/articles/index.html
+++ b/04_django/04_django_form/articles/templates/articles/index.html
@@ -3,7 +3,11 @@
 {% block content %}
   <h1>Articles</h1>
   <p><b>당신의 방문 횟수 : {{ visits_num }} {% if visits_num == 1 %} time {% else %} times{% endif %}</b></p>
-  <a href="{% url 'articles:create' %}">[NEW]</a>
+  {% if user.is_authenticated %}
+    <a href="{% url 'articles:create' %}">[NEW]</a>
+  {% else %}
+    <a href="{% url 'accounts:login' %}">[새 글을 작성하려면 로그인하세요]</a>
+  {% endif %}
   {% for article in articles %}
     <p>번호: {{ article.pk }}</p>
     <p>제목: {{ article.title }}</p>
