--- a/04_django/django_pracitce_2/articles/templates/articles/base.html
+++ b/04_django/django_pracitce_2/articles/templates/articles/base.html
@@ -10,6 +10,7 @@
   <title>Document</title>
 </head>
 <body>
+  <a href="{% url 'accounts:signup' %}">회원가입</a>
   <div class="container">
     {% block content %}
     {% endblock  %}
