191022 | update 04_django_form, add 05_model_relation

--- a/04_django/04_django_form/articles/templates/articles/base.html
+++ b/04_django/04_django_form/articles/templates/articles/base.html
@@ -1,4 +1,5 @@
 {% load bootstrap4 %}
+{% load gravatar %}
 
 <!DOCTYPE html>
 <html lang="ko">
@@ -6,6 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="https://kit.fontawesome.com/17820a52a0.js" crossorigin="anonymous"></script>
   {% bootstrap_css %}
   <title>Document</title>
 </head>
@@ -13,6 +15,7 @@
   <div class="container">
     {% if user.is_authenticated %} {# request.user.is_authenticated 가 원래 맞는데 user만 써도 django는 알아서 인식해줌 #}
       <h3> {# 인증 됐을 때 #}
+        <img src="https://s.gravatar.com/avatar/{{ request.user.email|makemd5 }}?s=80" alt="프로필이미지">
         Hello, {{ user.username }} &nbsp;
         <a href="{% url 'accounts:update' %}"><button class="btn btn-info">정보수정</button></a> &nbsp;
         <a href="{% url 'accounts:change_password' %}"><button class="btn btn-success">비번변경</button></a> &nbsp;
