191023 | revise django_practice_2

--- a/04_django/django_pracitce_2/accounts/templates/accounts/change_password.html
+++ b/04_django/django_pracitce_2/accounts/templates/accounts/change_password.html
@@ -2,10 +2,10 @@
 {% load bootstrap4 %}
 
 {% block content %}
-  <h1>회원가입</h1>
+  <h1>비밀번호 변경</h1>
   <form action="" method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="제출">
+    {% bootstrap_form form %}
+    {% buttons submit='변경' reset="Cancel" %}{% endbuttons %}
   </form>
 {% endblock  %}
