--- a/04_django/django_pracitce_2/accounts/templates/accounts/login.html
+++ b/04_django/django_pracitce_2/accounts/templates/accounts/login.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 
 {% block content %}
-  <h1>회원가입</h1>
+  <h1>로그인</h1>
   <form action="" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
