--- a/04_django/04_django_form/accounts/templates/accounts/login.html
+++ b/04_django/04_django_form/accounts/templates/accounts/login.html
@@ -1,5 +1,6 @@
 {% extends 'articles/base.html' %}
 {% load bootstrap4 %}
+{% load socialaccount %}
 
 {% block content %}
   <h1>로그인</h1>
@@ -8,4 +9,5 @@
     {% bootstrap_form form %}
     {% buttons submit='로그인' reset="Cancel" %}{% endbuttons %}
   </form>
+  <a class="btn btn-warning" href="{% provider_login_url "kakao" %}">KAKAO</a>
 {% endblock  %}
