200519 | add 08_02_react-ts-todolist

--- a/08_react/02_react_ts/ts-todolist/src/components/common/Header/Header.css
+++ b/08_react/02_react_ts/ts-todolist/src/components/common/Header/Header.css
@@ -1,8 +1,9 @@
 .header {
-  font-size: 22px;
+  font-size: 24px;
   font-weight: 600;
   color: crimson;
   background-color: #ddd;
   padding: 6px;
   letter-spacing: 2px;
+  text-align: center;
 }
