200716 | add event handling at 01_react_jsx

--- a/08_react/01_react_jsx/00_hello-react/src/App.css
+++ b/08_react/01_react_jsx/00_hello-react/src/App.css
@@ -5,3 +5,17 @@
   font-weight: bold;
   padding: 16px;
 }
+
+.chapter {
+  color: crimson;
+  font-size: 30px;
+  font-weight: 600;
+}
+
+.chapter::before {
+  content: '<';
+}
+
+.chapter::after {
+  content: '>';
+}
