--- a/08_react/01_react_jsx/04_todo-app/src/components/TodoListItem.scss
+++ b/08_react/01_react_jsx/04_todo-app/src/components/TodoListItem.scss
@@ -1,10 +1,16 @@
+.TodoListItem-virtualized {
+  & + & {
+    border-top: 1px solid #dee2e6;
+  }
+  &:nth-child(even) {
+    background: #f8f9fa;
+  }
+}
+
 .TodoListItem {
   padding: 1rem;
   display: flex;
   align-items: center;
-  &:nth-child(even) {
-    background: #f8f9fa;
-  }
 
   .checkbox {
     cursor: pointer;
