--- a/03_web/05_sass/00_sass_basic/css/sass-basics.css
+++ b/03_web/05_sass/00_sass_basic/css/sass-basics.css
@@ -1,10 +1,17 @@
+#box1, #box1 #box2 {
+  border-radius: 20px;
+  border: 3px solid #f00;
+  -webkit-box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
+}
+
 html {
   font-size: 18px;
 }
 
 body {
   margin: 20px;
-  background-color: #fff4ef;
+  background-color: #fff4cf;
 }
 
 div {
@@ -20,8 +27,6 @@ a {
 #box1 {
   font-size: 40px;
   background-color: #ffcccc;
-  -webkit-box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
-          box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
 }
 
 #box1:hover {
@@ -46,11 +51,6 @@ a {
   }
 }
 
-#box1, #box1-title {
-  border-radius: 20px;
-  border: 3px solid #f00;
-}
-
 #box1-title {
   font-style: italic;
   text-decoration: underline;
@@ -69,10 +69,6 @@ a {
 #box1 #box2 {
   font-size: 20px;
   background-color: #e9e9e9;
-  border-radius: 20px;
-  border: 3px solid #f00;
-  -webkit-box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
-          box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
 }
 
 #box1 #box2 > a {
