--- a/03_web/05_sass/00_sass_basic/sass/sass-basics.scss
+++ b/03_web/05_sass/00_sass_basic/sass/sass-basics.scss
@@ -1,4 +1,27 @@
-// Nesting
+// (3) mixin
+// mixin 함수명은 영문으로 시작하고 영문, 숫자, 하이픈, 언더스코어만 사용할 수 있다.
+// mixin 함수의 인자 기본값도 설정할 수 있다.
+@mixin fontSizeBgColor($fontSize: 20px, $bgColor: #fff) {
+  font-size: $fontSize;
+  background-color: $bgColor;
+}
+
+@mixin linkStyle($textColor, $textDeco: none) {
+  color: $textColor;
+  text-decoration: $textDeco;
+}
+
+// (4) extend
+// 완전히 똑같이 반복되는 코드를 묶어서 관리할 때 사용한다.
+%boxShape {
+  border-radius: 20px;
+  border: 3px solid #f00;
+  box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
+}
+
+// mixin vs extend
+// mixin은 사용되는 속성은 같으나 값만 바뀌는 경우에 사용하고
+// extend는 사용되는 속성과 값 모두 똑같을 때 사용한다.
 
 html {
   font-size: 18px; 
@@ -6,7 +29,7 @@ html {
 
 body {
   margin: 20px;
-  background-color: #fff4ef;
+  background-color: #fff4cf;
 }
 
 div {
@@ -20,10 +43,16 @@ a {
 }
 
 #box1 {
-  font-size: 40px;
-  background-color: #ffcccc;
-  box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
+  // font-size: 40px;
+  // background-color: #ffcccc;
+  @include fontSizeBgColor(40px, #ffcccc); // mixin을 불러올 때 @include 키워드를 사용한다.
 
+  // border-radius: 20px;
+  // border: 3px solid #f00;
+  // box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
+  @extend %boxShape; // extend를 불러올 때 @extend 키워드를 사용한다.
+
+  // (1) Nesting
   &:hover{
     background-color: #ccc;
     @media screen and (max-width: 500px) {
@@ -40,11 +69,6 @@ a {
     font-size: 30px;
   }
 
-  &, &-title {
-    border-radius: 20px;
-    border: 3px solid #f00;
-  }
-
   // '&-title' => '#box1-title'와 같은 의미
   &-title {
     font-style: italic;
@@ -54,12 +78,14 @@ a {
   // &는 자기 자신 요소를 지칭하게 된다.(여기서는 #box1)
   // 그냥 a만 쓰면 '#box1 a' 와 같이 컴파일이 된다.
   & > a {
-    color: #a22;
-    text-decoration: none;
+    // color: #a22;
+    // text-decoration: none;
+    @include linkStyle(#a22);
 
     &:hover {
-      color: #000;
-      text-decoration: underline;
+      // color: #000;
+      // text-decoration: underline;
+      @include linkStyle(#000, underline);
     }
   }
 }
@@ -69,20 +95,24 @@ a {
 // 한 눈에 포함 관계를 파악하기 다소 어렵다.
 // 그래서 이와 같은 경우는 나눠서 작성하는 것이 더 깔끔하다.
 #box1 #box2 {
-  font-size: 20px;
-  background-color: #e9e9e9;
+  // font-size: 20px;
+  // background-color: #e9e9e9;
+  @include fontSizeBgColor(20px, #e9e9e9);
   
-  border-radius: 20px;
-  border: 3px solid #f00;
-  box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
+  // border-radius: 20px;
+  // border: 3px solid #f00;
+  // box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
+  @extend %boxShape;
 
   & > a {
-    color: #ee6633;
-    text-decoration: none;
+    // color: #ee6633;
+    // text-decoration: none;
+    @include linkStyle(#ee6633);
 
     &:hover {
-      color: #a22;
-      text-decoration: underline;
+      // color: #a22;
+      // text-decoration: underline;
+      @include linkStyle(#a22, underline);
     }
   }
 }
@@ -110,7 +140,7 @@ a {
 }
 
 
-// Nesting을 활용한 media query
+// (2) Nesting을 활용한 media query
 
 // before(CSS)
 // @media screen and (max-width: 500px) {
