201023 | markup main section at lorem project

--- a/03_web/05_sass/02_lorem_project/sass/base/_base.scss
+++ b/03_web/05_sass/02_lorem_project/sass/base/_base.scss
@@ -1,6 +1,10 @@
 // google font - Nanum Gothic, Lato
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300&family=Nanum+Gothic:wght@400;700;800&display=swap');
 
+// icon font
+// https://material.io/icons 에서 원하는 아이콘 모양 선택
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
 // default setting
 * {
   margin: 0;
