--- a/03_web/05_sass/02_lorem_project/sass/index.scss
+++ b/03_web/05_sass/02_lorem_project/sass/index.scss
@@ -4,6 +4,10 @@
 
 @import "base/base";
 @import "base/animations";
+@import "base/typo";
+@import "base/utilities";
+
+@import "components/button";
 
 @import "layout/header";
 @import "layout/main";
