201025 | complete main section at lorem project

--- a/03_web/05_sass/02_lorem_project/sass/abstracts/_variables.scss
+++ b/03_web/05_sass/02_lorem_project/sass/abstracts/_variables.scss
@@ -1,6 +1,11 @@
 $color-primary:  #285a91;
 $color-secondary: #1f9cfd;
 $color-white: #fff;
+
+$color-blue-1: #a8d8ff;
+$color-blue-2: #c1e1ff;
+$color-blue-3: #d6eaff;
+
 $color-grey-light: #b9b9b9;
 $color-blue-dark: #3f4a56;
 $color-grey-dark: #474747;
