--- a/03_web/05_sass/02_lorem_project/css/index.css
+++ b/03_web/05_sass/02_lorem_project/css/index.css
@@ -206,9 +206,18 @@ header #header-text-sub {
           animation-fill-mode: backwards;
 }
 
+main::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
 main #section-about {
   background-color: #ededed;
   padding: 7rem 0 6.5rem 6rem;
+  width: 66.66666%;
+  min-height: 42rem;
+  float: left;
 }
 
 main #section-about::after {
@@ -219,6 +228,7 @@ main #section-about::after {
 
 main #section-about-words {
   width: 65%;
+  padding: 2rem 2rem 0 0;
   float: left;
 }
 
@@ -266,6 +276,51 @@ main #section-about-photo .photo img {
   height: 100%;
   -webkit-box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.5);
           box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.5);
+}
+
+main #section-etc {
+  width: 33.33334%;
+  float: left;
+}
+
+main #section-etc [id^="etc-"] {
+  height: 14rem;
+}
+
+main #section-etc .etc:nth-child(1) {
+  background-color: #a8d8ff;
+}
+
+main #section-etc .etc:nth-child(2) {
+  background-color: #c1e1ff;
+}
+
+main #section-etc .etc:nth-child(3) {
+  background-color: #d6eaff;
+}
+
+main #section-etc .etc .etc-icon {
+  padding-top: 3.5rem;
+  width: 30%;
+  text-align: center;
+  float: left;
+}
+
+main #section-etc .etc .etc-icon i {
+  font-size: 6rem;
+}
+
+main #section-etc .etc .etc-text {
+  padding-top: 1rem;
+  width: 70%;
+  float: left;
+}
+
+main #section-etc .etc .etc-text p {
+  margin: 0.5rem 0;
+  padding-right: 3.5rem;
+  text-align: justify;
+  font-size: 1.4rem;
 }
 
 footer {
