--- a/03_web/05_sass/02_lorem_project/sass/index.scss
+++ b/03_web/05_sass/02_lorem_project/sass/index.scss
@@ -8,6 +8,7 @@
 @import "base/utilities";
 
 @import "components/button";
+@import "components/nav";
 
 @import "layout/header";
 @import "layout/main";
