--- a/03_web/05_sass/02_lorem_project/sass/abstracts/_mixins.scss
+++ b/03_web/05_sass/02_lorem_project/sass/abstracts/_mixins.scss
@@ -5,3 +5,21 @@
     clear: both;
   }
 }
+
+@mixin mq($screen-width) {
+  @if $screen-width == 'small-screen-1' {
+    @media screen and (min-width: 900px) and (max-width: 1200px) {
+      @content;
+    }
+  }
+  @else if $screen-width == 'small-screen-2' {
+    @media screen and (min-width: 701px) and (max-width: 899px) {
+      @content;
+    }
+  }
+  @else if $screen-width == 'small-screen-3' {
+    @media screen and (max-width: 700px) {
+      @content;
+    }
+  }
+}
