--- a/03_web/05_sass/02_lorem_project/sass/layout/_main.scss
+++ b/03_web/05_sass/02_lorem_project/sass/layout/_main.scss
@@ -9,11 +9,31 @@ main {
     float: left;
 
     @include clearfix();
-    
+    @include mq('small-screen-1') {
+      width: 100%; // 이 내용이 _mixin.scss의 미디어 쿼리 부분의 @content; 부분에 들어가게 된다.
+    }
+    @include mq('small-screen-2') {
+      width: 100%;
+      height: 54rem;
+      padding: 7rem 6rem 6.5rem 6rem;
+    }
+    @include mq('small-screen-3') {
+      width: 100%;
+      height: 60rem;
+      padding: 7rem 6rem 6.5rem 6rem;
+    }
+     
     &-words {
       width: 65%;
       padding: 2rem 2rem 0 0;
       float: left;
+
+      @include mq('small-screen-2') {
+        width: 100%;
+      }
+      @include mq('small-screen-3') {
+        width: 100%;
+      }
 
       p {
         padding: 1.5rem 0;
@@ -28,11 +48,27 @@ main {
       width: 35%;
       float: left;
 
+      @include mq('small-screen-2') {
+        width: 100%;
+      }
+      @include mq('small-screen-3') {
+        width: 100%;
+      }
+
       .photo {
         position: absolute;
         width: 18rem;
         height: 12rem;
         transition: all .5s;
+
+        @include mq('small-screen-2') {
+          top: 3rem !important;
+          left: 50% !important;
+        }
+        @include mq('small-screen-3') {
+          top: 3rem !important;
+          left: 50% !important;
+        }
 
         &:hover {
           transform: scale(1.1);
@@ -44,6 +80,12 @@ main {
         &:nth-child(1) {
           left: 1rem;
           top: 3rem;
+          @include mq('small-screen-2') {
+            transform: translateX(-120%);
+          }
+          @include mq('small-screen-3') {
+            transform: translateX(-120%);
+          }
         }
 
         &:nth-child(2) {
@@ -64,11 +106,31 @@ main {
     width: 33.33334%;
     float: left;
 
+    @include mq('small-screen-1') {
+      width: 100%;
+    }
+    @include mq('small-screen-2') {
+      width: 100%;
+    }
+    @include mq('small-screen-3') {
+      width: 100%;
+    }
+
     [id^="etc-"] { // id 속성이 'etc-'로 시작하는 선택자 의미
       height: 14rem;
     }
 
     .etc {
+      @include mq('small-screen-1') {
+        width: 33.33333%;
+        float: left;
+      }
+      @include mq('small-screen-2') {
+        width: 33.33333%;
+        height: 22rem;
+        float: left;
+      }
+
       &:nth-child(1) {
         background-color: $color-blue-1;
       }
